--- a/app.json
+++ b/app.json
@@ -22,6 +22,11 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "expo": {
+      "web": {
+        "bundler": "metro"
+      }
+    },
     "plugins": [
       "expo-router",
       [
@@ -32,7 +37,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
