--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@animatereactnative/accordion": "^0.1.5",
     "@expo-google-fonts/barlow": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@legendapp/state": "^3.0.0-beta.26",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.28",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
@@ -44,7 +46,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "todo_rn": "."
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
