--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -35,7 +35,7 @@
     "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.5",
     "expo-router": "~4.0.17",
