--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@legendapp/state": "^3.0.0-beta.26",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tanstack/react-query": "^5.66.0",
     "babel-plugin-inline-import": "^3.0.0",
     "dayjs": "^1.11.13",
     "drizzle-orm": "",
